fix: relative path on js

--- a/resources/index.src.html
+++ b/resources/index.src.html
@@ -11,8 +11,8 @@
 
 <body>
   <main id="game"></main>
-  <script src="/js/lib.bundle.js"></script>
-  <script src="/js/core.js"></script>
+  <script src="js/lib.bundle.js"></script>
+  <script src="js/core.js"></script>
 </body>
 
 </html>
